# conda-cpp-package

./: CMakeLists.txt
.github/workflows/: build-windows.yml  conda-build.yml
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/: main.cpp
